--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding:0;
 }
 .main-container{
-    background-color: gray;
+    background-color:#000000;
     display:flex;
     align-items:center;
     justify-content:space-around;
@@ -19,6 +19,11 @@
     justify-content:space-around;
 }
 .item{
-    margin:10px;
+    margin-right:10px;
+    padding:5px;
     cursor:pointer;
+    font-size:18px;
+}
+.item:hover{
+    color:blueviolet;
 }
