--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@
     height:500px;
     background-image:url(IMG/background.png);
     background-color:black;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    
 }
 .banner-text{
     color:white;
@@ -46,11 +50,14 @@
 }
 .title{
     padding:10px;
-    font-size:30px;
+    font-size:55px;
+    font-weight:bold;
 }
 .description{
     padding:10px;
-    font-size:15px;
+    font-size :18px;
+    margin-top:15px;
+    margin-bottom:10px;
 }
 .btn{
     padding:10PX;
@@ -58,4 +65,34 @@
     color:white;
     margin-left:5px;
     cursor:pointer;
+}
+.btn:hover{
+    background-color:antiquewhite;
+    color:blueviolet;
+    border-radius:10px;
+}
+.about-photo{
+    width:300px;
+}
+.about-container{
+    display: flex;
+    align-items:center;
+    justify-content: space-around;
+    width:100%;
+    height:500px;
+
+}
+.head{
+    text-align:center;
+    font-size:55px;
+    padding:15px;
+    margin:10px;
+    font-weight:bold;
+}
+.des{
+    padding:10px;
+
+}
+.tp{
+    margin-top:15px;
 }
